# cloudCatcher

./: LICENSE  README  TODO.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/: __init__.py
src/weatherData/: __init__.py  main.py
test/: test_cloudCatcher.py
