[metadata]
name = cloudCatcher
version = 0.1.1
description = Check the weather at a given location.
long_description = file: README.md
long_description_content_type=text/markdown
keywords = cloudCatcher, python, workshop
home-page = https://github.com/Elschabanou/cloudCatcher.git
author = Jeronimo, mö, Silja
license = gpl-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    cloudCatcher
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=4.0
    tox>=3.24
    black>=21.1

[options.package_data]
cloudCatcher = py.typed